# mail-haven

./: README.md  pyproject.toml
.axentx-dev-bot/: 20260611-131805-mail-haven-E4-E4-S1-T3-db0869b6-code.md  20260613-132946-mail-haven-docs-3c27e5c2.md  20260613-180105-mail-haven-docs-467e3479.md  20260614-190959-mail-haven-docs-898a0100.md
axentx_product/: __init__.py
docs/: BMC.md  PRD.md  REQUIREMENTS.md  ROADMAP.md  STORIES.md  TECH_SPEC.md
src/: mail_haven.py
tests/: test_dummy.py  test_mail_haven.py
