[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "axentx-product"
version = "0.1.0"
description = "A minimal Axentx product package with a placeholder implementation."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Axentx Team", email = "team@axentx.com"}
]
